packages/errors/test/__snapshots__/CLOUD_UNKNOWN_INVALID_REQUEST.ansi
[31mWe encountered an unexpected error communicating with our servers.[39m
[31m[39m
[31m[95mStatusCodeError: 500 - "Internal Server Error"[39m[31m[39m
[31m[39m
[31mThere is likely something wrong with the request.[39m
[31m[39m
[31mThe --group flag you passed was: [33mfoo[39m[31m[39m
[31mThe --ciBuildId flag you passed was: [33minvalid[39m[31m[39m